# renderdoc-everything

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  gen_wrapperfile.py  main.h
.github/workflows/: release.yml  windows.yml
